# -*- coding: utf-8 -*-
[metadata]
name = demo_project
summary = Testing cookiecutter tool following video "Tutorial - Module development"
description-file =
    README.md
author = E. Vollmer (KIT)
author-email = elena.vollmer@kit.edu
version = 0.0.1
license = MIT
home-page = https://github.com/emvollmer/demo_project
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    demo_project

[entry_points]
deepaas.v2.model =
    demo_project = demo_project.api
